--- a/static/css/aplayer.css
+++ b/static/css/aplayer.css
@@ -28,7 +28,7 @@
   cursor: pointer;
   transition: 0.5s;
   transform-origin: left bottom;
-  box-shadow: var(--anzhiyu-shadow-border);
+  box-shadow: 0 8px 16px -4px #2c2d300c;
   border-radius: 40px;
   overflow: hidden;
 }
@@ -38,21 +38,21 @@
 }
 
 #nav-music.playing {
-  box-shadow: 0 0px 12px -3px var(--anzhiyu-none);
+  box-shadow: 0 0px 12px -3px rgba(0, 0, 0, 0);
   animation: playingShadow 5s linear infinite;
 }
 
 @keyframes playingShadow {
   0% {
-    box-shadow: 0 0px 12px -3px var(--anzhiyu-none);
+    box-shadow: 0 0px 12px -3px rgba(0, 0, 0, 0);
   }
 
   50% {
-    box-shadow: 0 0px 12px 0px var(--anzhiyu-main);
+    box-shadow: 0 0px 12px 0px #3b70fc;
   }
 
   100% {
-    box-shadow: 0 0px 12px -3px var(--anzhiyu-none);
+    box-shadow: 0 0px 12px -3px rgba(0, 0, 0, 0);
   }
 }
 
@@ -63,7 +63,7 @@
   z-index: 1;
   transition: 0.3s;
   transform: rotate(0deg) scale(1);
-  border: var(--style-border-always);
+  border: 1px solid #e3e8f7;
   animation: changeright 24s linear infinite;
   animation-play-state: paused;
 }
@@ -71,7 +71,7 @@
 #nav-music.playing .aplayer.aplayer-withlrc .aplayer-pic {
   box-shadow: 0 0 14px #ffffffa6;
   transform: rotate(0deg) scale(1.1);
-  border-color: var(--anzhiyu-white);
+  border-color: #fff;
   animation-play-state: running;
 }
 
@@ -104,7 +104,7 @@
 
 #nav-music .aplayer.aplayer-withlrc .aplayer-info {
   height: 100%;
-  color: var(--anzhiyu-fontcolor);
+  color: #363636;
   margin: 0;
   padding: 0;
   display: flex;
@@ -112,7 +112,7 @@
 }
 
 #nav-music.playing .aplayer.aplayer-withlrc .aplayer-info {
-  color: var(--anzhiyu-white);
+  color: #fff;
 }
 
 #nav-music.playing #nav-music-hoverTips {
@@ -120,8 +120,8 @@
   opacity: 0;
 }
 #nav-music #nav-music-hoverTips {
-  color: var(--anzhiyu-white);
-  background: var(--anzhiyu-main);
+  color: #fff;
+  background: #3b70fc;
   width: 100%;
   height: 100%;
   position: absolute;
@@ -153,19 +153,19 @@
 }
 
 #nav-music .aplayer {
-  background: var(--card-bg);
+  background: #fff;
   border-radius: 60px;
   height: 41px;
   display: flex;
   margin: 0;
   transition: 0.3s;
-  border: var(--style-border);
+  border: 1px solid #e3e8f7;
   box-shadow: none;
 }
 
 #nav-music.playing .aplayer {
-  background: var(--anzhiyu-main-op-deep);
-  border: var(--style-border-hover);
+  background: #4259efdd;
+  border: 1px solid #3b70fc;
   backdrop-filter: saturate(180%) blur(20px);
   backdrop-filter: blur(20px);
 }
@@ -261,7 +261,7 @@
 #nav-music .aplayer .aplayer-info .aplayer-controller .aplayer-bar-wrap .aplayer-bar .aplayer-played {
   height: 100%;
   opacity: 0.1;
-  background-color: var(--anzhiyu-white) !important;
+  background-color: #fff !important;
   animation: lightBar 5s ease infinite;
   animation-play-state: paused;
 }
@@ -302,7 +302,7 @@
 }
 
 #nav-music .aplayer .aplayer-lrc p.aplayer-lrc-current {
-  color: var(--anzhiyu-white);
+  color: #fff;
   border: none;
 }
 
@@ -321,6 +321,27 @@
 #nav-music .aplayer .aplayer-pic .aplayer-button {
   pointer-events: all;
 }
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
